crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@op_precedence__add_sub.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/op_precedence/add_sub.as
---
ConstantPool "a", "b", "c", "a=", ", b=", ", c=", "----", "a + b - c = ", "(a + b) - c = ", "---", "a - b + c = ", "(a - b) + c = ", "a + b - c + b = ", "(((a + b) - c) + b) = ", "a + -b = ", "a - -b = "
Push constant0
Push 10
DefineLocal
Push constant1
Push 5
DefineLocal
Push constant2
Push 2
DefineLocal
Push constant3
Push constant0
GetVariable
Add2
Push constant4
Add2
Push constant1
GetVariable
Add2
Push constant5
Add2
Push constant2
GetVariable
Add2
Trace
Push constant6
Trace
Push constant7
Push constant0
GetVariable
Push constant1
GetVariable
Add2
Push constant2
GetVariable
Subtract
Add2
Trace
Push constant8
Push constant0
GetVariable
Push constant1
GetVariable
Add2
Push constant2
GetVariable
Subtract
Add2
Trace
Push constant9
Trace
Push constant10
Push constant0
GetVariable
Push constant1
GetVariable
Subtract
Push constant2
GetVariable
Add2
Add2
Trace
Push constant11
Push constant0
GetVariable
Push constant1
GetVariable
Subtract
Push constant2
GetVariable
Add2
Add2
Trace
Push constant9
Trace
Push constant12
Push constant0
GetVariable
Push constant1
GetVariable
Add2
Push constant2
GetVariable
Subtract
Push constant1
GetVariable
Add2
Add2
Trace
Push constant13
Push constant0
GetVariable
Push constant1
GetVariable
Add2
Push constant2
GetVariable
Subtract
Push constant1
GetVariable
Add2
Add2
Trace
Push constant9
Trace
Push constant14
Push constant0
GetVariable
Push 0
Push constant1
GetVariable
Subtract
Add2
Add2
Trace
Push constant15
Push constant0
GetVariable
Push 0
Push constant1
GetVariable
Subtract
Subtract
Add2
Trace
